<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background"
tools:context="com.example.abhijith.weatheronmove.MainActivity">

<RelativeLayout
    android:id="@+id/upperView"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/place_hint"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:fontFamily="Roboto" />
    <TextView
        android:id="@+id/coord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/coord_hint"
        android:fontFamily="Roboto"
        android:layout_below="@+id/place"
        android:textColor="@color/colorText" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coord"
        android:id="@+id/intermediate"
        android:layout_centerHorizontal="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/day_hint"
        android:id="@+id/homeDay"
        android:textAllCaps="true"
        android:fontFamily="Roboto"
        android:textColor="@color/colorText"/>/>
        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" || "
            android:textAllCaps="true"
            android:fontFamily="Roboto"
            android:textColor="@color/colorText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date_hint"
        android:id="@+id/homeDate"
        android:fontFamily="Roboto"
        android:textColor="@color/colorText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/coord">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDate"
            android:text="@string/temp_hint"
            android:fontFamily="Roboto"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textDesc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middleView"
        android:id="@+id/bottomView"
        android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_hint"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" || "
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_hint"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorText" />
</LinearLayout>

</RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:id="@+id/weatherListView"
        android:weightSum="2"
        android:layout_margin="5dp"
        android:background="@drawable/border_ui"
        android:layout_gravity="center_horizontal|bottom" />
</FrameLayout>